--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -11,7 +11,9 @@
     "import io\n",
     "from PIL import Image\n",
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "\n",
+    "import config"
    ]
   },
   {
@@ -19,7 +21,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "sheet_url = 'https://docs.google.com/spreadsheets/d/1QX2IhFyYmGDFMvovw2WFz3wAT4piAZ_8hi5Lzp7LjV0/export?format=csv'\n",
+    "sheet_url = config.IMAGES_URL\n",
     "response = requests.get(sheet_url)\n",
     "content = response.content.decode()\n",
     "df = pd.read_csv(io.StringIO(content))\n",
