--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -17,8 +17,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Retrieve data from Google Sheet and do some cleaning"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "sheet_url = config.IMAGES_URL\n",
@@ -26,6 +35,44 @@
     "content = response.content.decode()\n",
     "df = pd.read_csv(io.StringIO(content))\n",
     "df.dropna(subset=['image_url'], inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Check dataframe"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<bound method DataFrame.info of                                                image_url     SIZE\n0      https://data.sanitino.eu/PRODUCT-33916/8607663...  575x860\n1      https://data.sanitino.eu/PRODUCT-62434/f7aa3c2...      NaN\n2      https://data.sanitino.eu/PRODUCT-33915/8607663...      NaN\n3      https://data.sanitino.eu/PRODUCT-62426/506d67b...      NaN\n4      https://data.sanitino.eu/PRODUCT-33893/ccd99b4...      NaN\n...                                                  ...      ...\n46883  https://data.sanitino.eu/PRODUCT-113844/9786df...      NaN\n46884  https://data.sanitino.eu/PRODUCT-20240/4a457da...      NaN\n46885  https://data.sanitino.eu/PRODUCT-47765/58a1a3d...      NaN\n46886  https://data.sanitino.eu/PRODUCT-56372/764c369...      NaN\n46887  https://data.sanitino.eu/PRODUCT-90692/5a30dff...      NaN\n\n[46868 rows x 2 columns]>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.info"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Retrieve images sizes from urls and write into dataframe"
    ],
    "metadata": {
     "collapsed": false
@@ -63,6 +110,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Check dataframe"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "outputs": [
@@ -78,6 +134,15 @@
    ],
    "source": [
     "df"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Check if there are any possible empty cells"
    ],
    "metadata": {
     "collapsed": false
@@ -104,11 +169,9 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "df.dropna(subset=['SIZE'], inplace=True)"
+    "Cleaning dataframe"
    ],
    "metadata": {
     "collapsed": false
@@ -128,6 +191,7 @@
     }
    ],
    "source": [
+    "df.dropna(subset=['SIZE'], inplace=True)\n",
     "df[\"SIZE\"].isnull().sum()"
    ],
    "metadata": {
@@ -150,6 +214,15 @@
    ],
    "source": [
     "df"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Write into Google Sheet"
    ],
    "metadata": {
     "collapsed": false
