--- a/task_3/task_3.ipynb
+++ b/task_3/task_3.ipynb
@@ -13,6 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Create OLXParser instance and retrieve data about apartments from 5 pages"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
@@ -25,11 +34,29 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Create DataFrame from retrieved data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "outputs": [],
    "source": [
     "df = pd.DataFrame(data, columns=[\"name\", \"price\", \"floor\", \"area\", \"location\"])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Check DataFrame"
    ],
    "metadata": {
     "collapsed": false
@@ -57,6 +84,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Check if there are any empty cells in DataFrame"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "outputs": [
@@ -71,6 +107,15 @@
    ],
    "source": [
     "df.isna().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Write DataFrame into Google Sheet"
    ],
    "metadata": {
     "collapsed": false
